fix disappearing images and alignment in sortAndFilter component

--- a/src/styles/SortAndFilter.css
+++ b/src/styles/SortAndFilter.css
@@ -19,10 +19,15 @@
     height: 95vh;
 }
 
+.sortAndFilter > h2 {
+    margin-top: 10px;
+    text-align: center;
+}
+
 .filterList,
 .sortList {
     list-style-type: none;
-    padding: 0px;
+    padding: 10px 0;
     margin: 0px;
 }
 
@@ -30,8 +35,19 @@
 .sortListEntry {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     margin: 1px;
+    gap: 10px;
+}
+
+.filterListEntry > label,
+.sortListEntry > label {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.filterListEntry > *, .sortListEntry > * {
+    cursor: pointer;
 }
 
 .starIcon {
